[package]
name = "named_params"
version = "1.0.1"
edition = "2021"
authors = ["Michael Eisel <michael.eisel@gmail.com>"]
license = "MIT"
repository = "https://github.com/michaeleisel/named_params"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
